--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body ng-controller="GlobalController as gc">
-  <div>
+
+  <div class="collapse navbar-collapse">
     <a href="/">Home</a>
     <a href="/login">Login</a>
     <a href="/register">Register</a>
@@ -19,22 +20,27 @@
     <span>Logged in as: <a href="#">{{gc.status.username}}</a></span>
   </div>
 
+  <hr>
   <ng-view></ng-view>
 
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js" charset="utf-8"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="/scripts/angular/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.0.3/ui-bootstrap.min.js" charset="utf-8"></script>
   <script src="/scripts/angular-route/angular-route.min.js"></script>
   <script src="/scripts/angular-resource/angular-resource.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js" charset="utf-8"></script>
+  <script src="/scripts/angular-animate/angular-animate.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.1/ui-bootstrap-tpls.min.js" charset="utf-8"></script>
 
   <script src="/javascript/app.js"></script>
   <script src="/javascript/services/HomeService.js"></script>
   <script src="/javascript/services/UserService.js"></script>
+  <script src="/javascript/services/ReviewService.js"></script>
   <script src="/javascript/services/HTTPFactory.js"></script>
   <script src="/javascript/controllers/HomeController.js"></script>
   <script src="/javascript/controllers/UserController.js"></script>
   <script src="/javascript/controllers/GlobalController.js"></script>
   <script src="/javascript/controllers/DishCreateController.js"></script>
+  <script src="/javascript/controllers/DishPageController.js"></script>
 </body>
 
 </html>
