--- a/views/index.html
+++ b/views/index.html
@@ -41,6 +41,7 @@
   <script src="/javascript/controllers/GlobalController.js"></script>
   <script src="/javascript/controllers/DishCreateController.js"></script>
   <script src="/javascript/controllers/DishPageController.js"></script>
+  <script src="/javascript/controllers/DishUpdateController.js"></script>
 </body>
 
 </html>
