--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
     <a href="/login">Login</a>
     <a href="/register">Register</a>
     <button type="button" ng-click="gc.logout()">Logout</button>
-    <span>Logged in as: <a href="#">{{gc.status.username}}</a></span>
+    <span>Logged in as: <a href="/userProfile">{{gc.status.username}}</a></span>
   </div>
 
   <hr>
@@ -42,6 +42,7 @@
   <script src="/javascript/controllers/DishCreateController.js"></script>
   <script src="/javascript/controllers/DishPageController.js"></script>
   <script src="/javascript/controllers/DishUpdateController.js"></script>
+  <script src="/javascript/controllers/UserFavoriteController.js"></script>
 </body>
 
 </html>
