--- a/views/index.html
+++ b/views/index.html
@@ -12,25 +12,37 @@
 
 <body ng-controller="GlobalController as gc">
 
-  <div class="collapse navbar-collapse">
+  <!--NavBar-->
+  <div class="navbar">
     <a href="/">Home</a>
-    <a href="/login">Login</a>
-    <a href="/register">Register</a>
-    <button type="button" ng-click="gc.logout()">Logout</button>
-    <span>Logged in as: <a href="/userProfile">{{gc.status.username}}</a></span>
+    <a href="/login" ng-hide="gc.status.username !== null">Login</a>
+    <a href="/register" ng-hide="gc.status.username !== null">Register</a>
+    <button ng-show="gc.status.username !== null" type="button" ng-click="gc.logout()">Logout</button>
+    <span ng-show="gc.status.username !== null">Logged in as: <a href="/userProfile">{{gc.status.username}}</a></span>
   </div>
 
   <hr>
   <ng-view></ng-view>
 
+  <!--SCRIPTS-->
   <script src="https://code.jquery.com/jquery-2.1.4.min.js" charset="utf-8"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="/scripts/angular/angular.min.js"></script>
+  <script src="/scripts/lodash/dist/lodash.min.js"></script>
   <script src="/scripts/angular-route/angular-route.min.js"></script>
   <script src="/scripts/angular-resource/angular-resource.min.js"></script>
   <script src="/scripts/angular-animate/angular-animate.js"></script>
+  <script src="/scripts/angular-ui-map/ui-map.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-utils/0.1.1/angular-ui-utils.min.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.1/ui-bootstrap-tpls.min.js" charset="utf-8"></script>
 
+  <!--Google Maps api-->
+  <script src="/scripts/angular-simple-logger/dist/angular-simple-logger.js"></script>
+  <script src="/scripts/angular-google-maps/dist/angular-google-maps.min.js"></script>
+
+
+  <!--Controllers & Services-->
   <script src="/javascript/app.js"></script>
   <script src="/javascript/services/HomeService.js"></script>
   <script src="/javascript/services/UserService.js"></script>
