--- a/public/css/site.css
+++ b/public/css/site.css
@@ -8,3 +8,9 @@
     max-width:100%;
     width: auto;
 }
+
+.angular-google-map-container {
+    height: 300px;
+    width: 350px;
+    border: 1px solid black;
+}
