--- a/public/templates/userFavorites.html
+++ b/public/templates/userFavorites.html
@@ -1,4 +1,11 @@
-<h1>{{gc.status.username}}'s Favorite dishes: </h1>
-<div ng-repeat="d in vm.favDishes">
-  {{d.dishName}}
+<div class="container-fluid text-center" >
+  <h1>{{gc.status.username}}'s Favorite dishes: </h1>
+  <hr>
+  <div class="col-md-4 col-md-offset-4" ng-repeat="d in vm.favDishes">
+    <h3 style="background-color:  #008080; color:  #ffffff"><a href="/yummydish/{{d._id}}">{{d.dishName}}</a></h3>
+    <h5><span style="color: #008080; font-size: x-large">@</span>{{d.restaurant.name}}</h5>
+    <img class="img-responsive" src="{{d.imgurl}}" alt="" />
+    <span>{{d.tags}}</span>
+    <hr>
+  </div>
 </div>
