--- a/views/index.html
+++ b/views/index.html
@@ -8,20 +8,43 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="https://bootswatch.com/journal/bootstrap.min.css">
   <link rel="stylesheet" href="/css/site.css" charset="utf-8" />
+  <link rel="stylesheet" href="/css/animate.css">
 </head>
 
 <body ng-controller="GlobalController as gc">
 
   <!--NavBar-->
-  <div class="navbar">
-    <a href="/">Home</a>
-    <a href="/login" ng-hide="gc.status.username !== null">Login</a>
-    <a href="/register" ng-hide="gc.status.username !== null">Register</a>
-    <button ng-show="gc.status.username !== null" type="button" ng-click="gc.logout()">Logout</button>
-    <span ng-show="gc.status.username !== null">Logged in as: <a href="/userProfile">{{gc.status.username}}</a></span>
-  </div>
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">
+          <img id="brand-image" style="height: 25px; width: max;" src="http://i.imgur.com/Foee4PD.png?1" alt="" />
+          <!-- white font logo: http://i.imgur.com/fb8bsos.png?1  -->
+        </a>
+      </div>
 
-  <hr>
+      <div class="collapse navbar-collapse" id="navbar">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/viewAll">All Dishes</a></li>
+          <li><a href="/addDish">Add Dish</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li ng-hide="gc.status.username !== null"><a href="/login">Login</a></li>
+          <li ng-hide="gc.status.username !== null"><a href="/register">Sign Up</a></li>
+          <li ng-show="gc.status.username !== null">Logged in as: <a style="color: #ff0000" href="/userProfile">{{ gc.status.username }}</a></li>
+          <li ng-show="gc.status.username !== null"><button ng-click="gc.logout()">Logout</button></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+
+
+  <toast></toast>
   <ng-view></ng-view>
 
   <!--SCRIPTS-->
